deploy/overlays/production/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-web
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-api
spec:
  replicas: 2
